add reservation type to system config